# swissdex

./: Cargo.toml  README.md
resources/: style.css
src/: main.rs  resources.rs  templates.rs
