[package]
name = "swissdex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["http1","server","runtime","tcp","stream"]}
"humanize-rs" = "0.1"
"unroll" = "0.1.5"
"pretty-bytes" = "0.2"
"chrono" = "0.4"
"regex" = "1.6"
"lazy_static" = "1.1"
 phf = { version = "0.11", features = ["macros"] }
